--- a/Lexicon-Inlamning-01.Web/Views/RunningShoes/Create.cshtml
+++ b/Lexicon-Inlamning-01.Web/Views/RunningShoes/Create.cshtml
@@ -1,30 +1,24 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@model Lexicon_Inlamning_01.Web.Models.RunningShoe
+﻿@model Lexicon_Inlamning_01.Web.Models.RunningShoe
 
-<!DOCTYPE html>
-    <html>
-    <head>
-        <title>Add Running Shoe</title>
-    <link rel="stylesheet" href="https://unpkg.com/@@picocss/pico@@latest/css/pico.classless.min.css">
-    </head>
-    <body>
-        <div style="margin: 50px;">
-            <h2>Add Running Shoe</h2>
+@{
+    ViewBag.Title = "New Running Shoe";
+}
+<div style="margin: 50px;">
+    <h2>Add Running Shoe</h2>
 
-            <form asp-controller="RunningShoes" asp-action="Create" style="width: 350px;">
-                <label asp-for="Name"></label>
-                <input asp-for="Name" />
-                <span asp-validation-for="Name"></span>
+    <form asp-controller="RunningShoes" asp-action="Create" style="width: 350px;">
+        <label asp-for="Name"></label>
+        <input asp-for="Name" />
+        <span asp-validation-for="Name"></span>
                 
-                <label asp-for="Price"></label>
-                <input asp-for="Price" />
-                <span asp-validation-for="Price"></span>
-                <br />
-                <input type="submit" value="Add" />
-            </form>
+        <label asp-for="Price"></label>
+        <input asp-for="Price" />
+        <span asp-validation-for="Price"></span>
+        <br />
+        <input type="submit" value="Add" />
+        <div asp-validation-summary="All"></div>
+    </form>
 
-            <div asp-validation-summary="All"></div>
+    
 
-        </div>
-    </body>
-    </html> 
+</div>
